--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,229 @@ footer div {
     justify-content: center;
 
 }
+
+
+/* Estilos de container servicios */
+
+.container{
+background: #FFb0d5;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+justify-content: center;
+align-items: stretch;
+}
+
+.item{
+  margin-bottom: 1.33em;
+  margin-top: 1.33em;
+  border: 2pt solid #CCCCCC;
+  padding: 1em;
+  margin: 1em;
+  border-radius: 10px 10px 10px 10px;
+}
+
+
+
+.cabezal{
+   width: 100%;
+   height: 5em;
+   padding-top: 3.5em;
+   vertical-align: middle;
+}
+
+.cabezal p{
+    vertical-align: middle;
+    font-size: 3vw;
+ }
+
+.intro{
+   width: 60%;
+   margin-left: 20%;
+   margin-right: 20%;
+   margin-bottom: 5vw;
+   padding-top: 3.5em;
+   vertical-align: middle;
+}
+
+.intro p{
+    vertical-align: middle;
+    font-size: 2vw;
+    line-height: 3vw;
+    hyphens: none;
+ }
+
+.info{
+   width: 100%;
+   margin-left: 2vw;
+   margin-right: 2vw;
+   margin-bottom: 2vw;
+   vertical-align: middle;
+
+}
+
+
+/* Breakpoints */
+
+/* Extra small devices (600px and down) */
+@media only screen and (max-width: 600px){
+.container{
+background: red;
+flex-direction: column;
+}
+ 
+}
+
+/* Small devices (600px and up) */
+@media only screen and (min-width: 600px){
+.container{
+flex-direction: column;
+background: green;
+}
+}
+
+/* Medium devices (768px and up) */
+@media only screen and (min-width: 768px){
+.container{
+flex-direction: row;
+background: orange;
+}
+.item{
+    width: 40%;
+}
+}
+
+/* Large devices (992px and up) */
+@media only screen and (min-width: 992px){
+ .container{
+background: pink;
+flex-direction: row;
+}
+.item{
+    width: 40%;
+}
+}
+
+/* Extralarge devices (1200pz and up) */
+@media only screen and (min-width: 1200px){
+.container{
+background: blue;
+flex-direction: row;
+}
+.item{
+    width: 40%;
+}
+}
+}
+
+
+/* Imágenes */
+
+.image-interior img {
+    display: flex;
+    max-width: 100%;
+    height: auto;
+  }
+
+img {
+    max-width: 100%;
+    height: auto;
+  }
+
+/* Aminación */
+@keyframes cambiarColor {
+0% {background: #f8a375;}
+/* Primer fotograma */
+30% {background: #ff8243; }
+/* Segundo fotograma */
+100% {background: #ffd792; }
+/* Último fotograma */
+
+}
+
+.cambiarColor {
+width: width: 100%;
+height: width: 100%;
+background-color: #ffd792;
+animation-name: cambiarColor;
+animation-duration: 10s ;
+animation-delay: 1s;
+animation-iteration-count: infinite;
+/* animation: cambiarColor 2s 1s; */ }
+
+
+
+
+/* Estilos de texto */
+
+// <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 100 to 900
+
+.montserrat-<uniquifier> {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+
+i, em {
+    font-style: italic;
+}
+
+b, strong {
+    font-weight: bold;
+}
+
+a {
+    text-decoration: none;
+}
+
+.right{
+    text-align: right;
+}
+
+.center{
+    text-align: center;
+}
+
+.noindent{
+    text-align: center;
+    text-indent: 0;
+}
+
+p {
+    text-indent: 0;
+    margin: 0;
+    padding: 0;
+    text-align: justify;
+    font-size: 1vw;
+    line-height: 1.5vw;
+    hyphens: auto;
+    font-family: "Montserrat", sans-serif;
+}
+
+h2 {
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
+    font-size: 2vw;
+    margin-left: 0;
+    text-indent: 0;
+}
+
+ h3, h4, h5, h6 {
+    font-family: "Montserrat", sans-serif;
+    text-align: left;
+    font-size: 1.5vw;
+    margin-left: 0;
+    text-indent: 0;
+}
+
+/* ELIMIMAR ESTE ESTILO, es solo para destacar la sección */
+.formulario{
+   width: 100%;
+   height: 5em;
+   padding-top: 3.5em;
+   vertical-align: middle;
+   background-color: red;
+
+}
