--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
-header {
-    background-color: black;
-    padding: 10px;
+/*-------------VARIABLES GENERALES---------------*/
+:root{
+    --bs-border-width: 1px;
+    --bs-border-radius: 0.375rem;
+    --bs-border-color: #dee2e6;
+    --bs-footer-color: #104172;
 }
-header h1 {
-    color: white;
-    text-align: center;
+
+/*-------------------GENERALES-------------------*/
+body{
+    margin: 0%;
+}
+header {
+    background: url(/imgs/header-bg.jpg);  
 }
 
 header nav a,.buttom {
@@ -22,7 +29,7 @@ header nav a:hover{
 }
 footer {
     padding: 10px;
-    background-color: black;
+    background-color: var(--bs-footer-color);
 }
 footer p{
     color: rgb(255, 255, 255);
@@ -40,64 +47,143 @@ footer div {
     justify-content: center;
 
 }
+/* ----------------PAGINA CONTACTOS ----------------*/
+
+.fila{
+    margin-top: 5px;
+}
+.subTitleContactenos{
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: solid 2px;
+    margin-top: 30px;
+    margin-bottom: 5px;
+    font-size: calc(1.275rem + .3vw);
+   
+}
+
+.titleContactenos{
+    text-align: center;
+    font-size: calc(1.3rem + .6vw);
+}
+
+.textinp{
+    display: inline-block;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    background-clip: padding-box;
+    border: var(--bs-border-width) solid var(--bs-border-color);
+    border-radius: var(--bs-border-radius);
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+/*-------------ESTRUCTURA GRID---------------*/
+
+.grid-container {
+    width: 100%;
+    display: grid;
+    grid-template-areas:
+        'navbar-area'
+        'content-area'
+        'footer-area';
+}
+
+.navbar-area {
+    grid-area: navbar-area;
+
+}
+.nav {
+    display: block;
+}
+.icon-menu{
+    display: none;
+}
+.logo{
+    width: 100px;
+    height: 50px;
+}
+.content-area{
+    margin: 0 auto;
+    max-width: 800px;
+}
+/*----------- PUNTOS DE CORTE -----------*/
+/* Extra small devices (Dispositivos moviles) */
+@media only screen and (max-width: 600px) {
+    .nav{
+        display: none;
+    }
+    .icon-menu{
+        display:block;
+    }
+}
+    /* Small devices (600px and up) */
+@media only screen and (min-width: 600px) {
+
+}
+    /* Medium devices (768px and up) */
+@media only screen and (min-width: 768px) {
+
+}
+
 
 
 /* Estilos de container servicios */
 
-.container{
-background: #FFb0d5;
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-justify-content: center;
-align-items: stretch;
+.container-index {
+    background: #FFb0d5;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
 }
 
-.item{
-  margin-bottom: 1.33em;
-  margin-top: 1.33em;
-  border: 2pt solid #CCCCCC;
-  padding: 1em;
-  margin: 1em;
-  border-radius: 10px 10px 10px 10px;
+.item {
+    margin-bottom: 1.33em;
+    margin-top: 1.33em;
+    border: 2pt solid #CCCCCC;
+    padding: 1em;
+    margin: 1em;
+    border-radius: 10px 10px 10px 10px;
 }
 
 
 
-.cabezal{
-   width: 100%;
-   height: 5em;
-   padding-top: 3.5em;
-   vertical-align: middle;
+.cabezal {
+    width: 100%;
+    height: 5em;
+    padding-top: 3.5em;
+    vertical-align: middle;
 }
 
-.cabezal p{
+.cabezal p {
     vertical-align: middle;
     font-size: 3vw;
- }
-
-.intro{
-   width: 60%;
-   margin-left: 20%;
-   margin-right: 20%;
-   margin-bottom: 5vw;
-   padding-top: 3.5em;
-   vertical-align: middle;
 }
 
-.intro p{
+.intro {
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 5vw;
+    padding-top: 3.5em;
+    vertical-align: middle;
+}
+
+.intro p {
     vertical-align: middle;
     font-size: 2vw;
     line-height: 3vw;
     hyphens: none;
- }
+}
 
-.info{
-   width: 100%;
-   margin-left: 2vw;
-   margin-right: 2vw;
-   margin-bottom: 2vw;
-   vertical-align: middle;
+.info {
+    width: 100%;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    margin-bottom: 2vw;
+    vertical-align: middle;
 
 }
 
@@ -105,54 +191,56 @@ align-items: stretch;
 /* Breakpoints */
 
 /* Extra small devices (600px and down) */
-@media only screen and (max-width: 600px){
-.container{
-background: red;
-flex-direction: column;
-}
- 
+@media only screen and (max-width: 600px) {
+    .container-index {
+        background: red;
+        flex-direction: column;
+    }
+
 }
 
 /* Small devices (600px and up) */
-@media only screen and (min-width: 600px){
-.container{
-flex-direction: column;
-background: green;
-}
+@media only screen and (min-width: 600px) {
+    .container-index {
+        flex-direction: column;
+        background: green;
+    }
 }
 
 /* Medium devices (768px and up) */
-@media only screen and (min-width: 768px){
-.container{
-flex-direction: row;
-background: orange;
-}
-.item{
-    width: 40%;
-}
+@media only screen and (min-width: 768px) {
+    .container-index {
+        flex-direction: row;
+        background: orange;
+    }
+
+    .item {
+        width: 40%;
+    }
 }
 
 /* Large devices (992px and up) */
-@media only screen and (min-width: 992px){
- .container{
-background: pink;
-flex-direction: row;
-}
-.item{
-    width: 40%;
-}
+@media only screen and (min-width: 992px) {
+    .container-index {
+        background: pink;
+        flex-direction: row;
+    }
+
+    .item {
+        width: 40%;
+    }
 }
 
 /* Extralarge devices (1200pz and up) */
-@media only screen and (min-width: 1200px){
-.container{
-background: blue;
-flex-direction: row;
-}
-.item{
-    width: 40%;
-}
-}
+@media only screen and (min-width: 1200px) {
+    .container-index {
+        background: blue;
+        flex-direction: row;
+    }
+
+    .item {
+        width: 40%;
+    }
 }
 
 
@@ -162,54 +250,66 @@ flex-direction: row;
     display: flex;
     max-width: 100%;
     height: auto;
-  }
+}
 
 img {
     max-width: 100%;
     height: auto;
-  }
+}
 
 /* Aminación */
 @keyframes cambiarColor {
-0% {background: #f8a375;}
-/* Primer fotograma */
-30% {background: #ff8243; }
-/* Segundo fotograma */
-100% {background: #ffd792; }
-/* Último fotograma */
+    0% {
+        background: #f8a375;
+    }
+
+    /* Primer fotograma */
+    30% {
+        background: #ff8243;
+    }
+
+    /* Segundo fotograma */
+    100% {
+        background: #ffd792;
+    }
+
+    /* Último fotograma */
 
 }
 
 .cambiarColor {
-width: width: 100%;
-height: width: 100%;
-background-color: #ffd792;
-animation-name: cambiarColor;
-animation-duration: 10s ;
-animation-delay: 1s;
-animation-iteration-count: infinite;
-/* animation: cambiarColor 2s 1s; */ }
+    width:  100%;
+    height: 100%;
+    background-color: #ffd792;
+    animation-name: cambiarColor;
+    animation-duration: 10s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+    /* animation: cambiarColor 2s 1s; */
+}
 
 
 
 
 /* Estilos de texto */
 
-// <uniquifier>: Use a unique and descriptive class name
+/* <uniquifier>: Use a unique and descriptive class name
 // <weight>: Use a value from 100 to 900
 
 .montserrat-<uniquifier> {
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
 }
-
-i, em {
+*/
+i,
+em {
     font-style: italic;
 }
 
-b, strong {
+b,
+strong {
     font-weight: bold;
 }
 
@@ -217,15 +317,15 @@ a {
     text-decoration: none;
 }
 
-.right{
+.right {
     text-align: right;
 }
 
-.center{
+.center {
     text-align: center;
 }
 
-.noindent{
+.noindent {
     text-align: center;
     text-indent: 0;
 }
@@ -249,7 +349,10 @@ h2 {
     text-indent: 0;
 }
 
- h3, h4, h5, h6 {
+h3,
+h4,
+h5,
+h6 {
     font-family: "Montserrat", sans-serif;
     text-align: left;
     font-size: 1.5vw;
@@ -258,11 +361,11 @@ h2 {
 }
 
 /* ELIMIMAR ESTE ESTILO, es solo para destacar la sección */
-.formulario{
-   width: 100%;
-   height: 5em;
-   padding-top: 3.5em;
-   vertical-align: middle;
-   background-color: red;
+.formulario {
+    width: 100%;
+    height: 5em;
+    padding-top: 3.5em;
+    vertical-align: middle;
+    background-color: red;
 
 }
