--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /*-------------VARIABLES GENERALES---------------*/
-:root{
+:root {
     --bs-border-width: 1px;
     --bs-border-radius: 0.375rem;
     --bs-border-color: #dee2e6;
@@ -7,14 +7,16 @@
 }
 
 /*-------------------GENERALES-------------------*/
-body{
+body {
     margin: 0%;
 }
+
 header {
-    background: var(--bs-border-color); 
+    background: var(--bs-border-color);
 }
 
-.item-nav,.buttom {
+.item-nav,
+.buttom {
     color: white;
     text-align: center;
     font-size: 20px;
@@ -25,10 +27,11 @@ footer {
     padding: 10px;
     background-color: var(--bs-footer-color);
 }
-footer p{
+
+footer p {
     color: rgb(255, 255, 255);
     text-align: center;
-    
+
 }
 
 footer div a i {
@@ -36,21 +39,25 @@ footer div a i {
     margin-left: 2px;
     margin-right: 2px;
 }
+
 footer div {
     display: flex;
     justify-content: center;
 
 }
+
 a:hover {
     color: #0a58ca;
 }
+
 /*-------------------------------------------*/
 /* ----------------PAGINA CONTACTOS ----------------*/
 /*-------------------------------------------*/
-.fila{
+.fila {
     margin-top: 5px;
 }
-.subTitleContactenos{
+
+.subTitleContactenos {
     border-top: 0px;
     border-left: 0px;
     border-right: 0px;
@@ -59,15 +66,15 @@ a:hover {
     margin-bottom: 5px;
     font-size: calc(1.275rem + .3vw);
     text-align: start;
-   
+
 }
 
-.titleContactenos{
+.titleContactenos {
     text-align: center;
     font-size: calc(1.3rem + .6vw);
 }
 
-.textinp{
+.textinp {
     display: inline-block;
     padding: .375rem .75rem;
     font-size: 1rem;
@@ -77,7 +84,8 @@ a:hover {
     border-radius: var(--bs-border-radius);
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
-.icon-menu{
+
+.icon-menu {
     padding: 5px;
     border: 2px solid;
     border-radius: 2px;
@@ -91,17 +99,17 @@ a:hover {
 .carousel {
     position: relative;
     width: 100%;
-    height: 375px; 
+    height: 375px;
     overflow: hidden;
-  }
-  
-  .carousel-inner {
+}
+
+.carousel-inner {
     position: relative;
     width: 100%;
     height: 100%;
-  }
-  
-  .carousel-item {
+}
+
+.carousel-item {
     position: absolute;
     top: 0;
     left: 0;
@@ -109,19 +117,19 @@ a:hover {
     height: 100%;
     opacity: 0;
     transition: opacity 1s ease;
-  }
-  
-  .carousel-item img {
+}
+
+.carousel-item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
-  
-  .carousel-item.active {
+}
+
+.carousel-item.active {
     opacity: 1;
-  }
-  
-  .carousel-caption1 {
+}
+
+.carousel-caption1 {
     position: absolute;
     top: 20px;
     left: 50%;
@@ -133,9 +141,10 @@ a:hover {
     padding: 10px 20px;
     border-radius: 5px;
     text-align: center;
-    
-  }
-  .carousel-caption2 {
+
+}
+
+.carousel-caption2 {
     position: absolute;
     bottom: 20px;
     left: 50%;
@@ -145,9 +154,9 @@ a:hover {
     padding: 10px 20px;
     border-radius: 5px;
     text-align: center;
-  }
-  
-  button {
+}
+
+button {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -156,27 +165,22 @@ a:hover {
     border: none;
     padding: 10px;
     cursor: pointer;
-  }
-
-/*-------------ESTRUCTURA GRID---------------*/
-/*-------------------------------------------*/
+}
 
 .grid-container {
     width: 100%;
-    display: grid;
-    grid-template-areas:
-        'navbar-area'
-        'content-area'
-        'footer-area';
+
 }
+
 /*---------Barra de navegacion---------*/
 .navbar-area {
     grid-area: navbar-area;
     width: 100%;
 
 }
+
 /*---------Barra de navegacion para PC---------*/
-.navbar{
+.navbar {
     display: flex;
     margin: 0 auto;
     max-width: 1000px;
@@ -184,31 +188,34 @@ a:hover {
     align-items: center;
     padding-left: 5%;
     padding-right: 5%;
-    
+
 }
 
-.logo{
+.logo {
     width: 80px;
-    height:80px;
+    height: 80px;
 }
-.content-area{
+
+.content-area {
     margin: 0 auto;
     max-width: 800px;
 }
 
 /*---------Barra de navegacion movile---------*/
-.nav-movile{
+.nav-movile {
     display: none;
 
 }
-.icon-menu{
+
+.icon-menu {
     display: none;
 }
-.icon-menu:hover{
+
+.icon-menu:hover {
     color: #CCCCCC;
 }
 
-.nav-movile-popup{
+.nav-movile-popup {
     transform: translateX(-100%);
     transition: transform 0.5s ease;
     position: fixed;
@@ -218,25 +225,28 @@ a:hover {
     display: flex;
     flex-direction: row;
 }
-.nav-movile-popup.activado{
-transform: translateX(0); 
+
+.nav-movile-popup.activado {
+    transform: translateX(0);
 }
 
-.nav-movile-izq{
+.nav-movile-izq {
     background-color: #ffffff;
     height: 100%;
     width: 70%;
     opacity: 1.0;
     display: flex;
-    flex-direction: column  ;
+    flex-direction: column;
 }
-.nav-movile-der{
+
+.nav-movile-der {
     background-color: #9a9a9ba5;
     height: 100%;
     width: 30%;
     opacity: 0.5;
 }
-.item-nav-movile{
+
+.item-nav-movile {
     color: #000000;
     display: block;
     width: 100%;
@@ -246,8 +256,9 @@ transform: translateX(0);
     padding-bottom: 20px;
     border-bottom: 1px solid #d0d1d0;
 }
-#faxx2{
-    position:absolute;
+
+#faxx2 {
+    position: absolute;
     top: 10px;
     right: 10px;
 }
@@ -263,6 +274,7 @@ transform: translateX(0);
     align-items: stretch;
 
 }
+
 .container-index2 {
 
     display: flex;
@@ -271,6 +283,7 @@ transform: translateX(0);
     justify-content: center;
     align-items: stretch;
 }
+
 .item {
     margin-bottom: 1.33em;
     margin-top: 1.33em;
@@ -280,6 +293,7 @@ transform: translateX(0);
     border-radius: 10px 10px 10px 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.523);
 }
+
 .item2 {
     margin-bottom: 1.33em;
     margin-top: 1.33em;
@@ -329,11 +343,11 @@ transform: translateX(0);
 
 }
 
-.ConoceMas{
+.ConoceMas {
     text-align: right;
     display: block;
     margin-top: 5px;
-    color:#474747;
+    color: #474747;
     font-size: 1.5vw;
 }
 
@@ -342,84 +356,109 @@ transform: translateX(0);
 /* Extra small devices (Dispositivos moviles) */
 
 @media only screen and (max-width: 600px) {
-    .container-index, .container-index2 {
+
+    .container-index,
+    .container-index2 {
 
         flex-direction: column;
     }
-    .nav-pc{
+
+    .nav-pc {
         display: none;
     }
-    .nav-movile{
-        display:block;
+
+    .nav-movile {
+        display: block;
     }
+
     .container-index2 {
- 
+
         flex-direction: column;
     }
-    .nav-movile-popup{
-        display: block; 
+
+    .nav-movile-popup {
+        display: block;
     }
 }
 
 /* Small devices (600px and up) */
 @media only screen and (min-width: 600px) {
-    .container-index, .container-index2 {
+
+    .container-index,
+    .container-index2 {
         flex-direction: column;
 
     }
-    .nav-movile-popup{
-        display: block; 
+
+    .nav-movile-popup {
+        display: block;
     }
 }
 
 /* Medium devices (768px and up) */
 @media only screen and (min-width: 768px) {
-    .container-index, .container-index2 {
+
+    .container-index,
+    .container-index2 {
         flex-direction: row;
- 
+
     }
+
     .item2 {
         width: 20%;
     }
+
     .item {
         width: 40%;
     }
-    .nav-movile-popup{
-        display: block; 
+
+    .nav-movile-popup {
+        display: block;
     }
 }
 
 /* Large devices (992px and up) */
 @media only screen and (min-width: 992px) {
-    .container-index, .container-index2 {
-    
+
+    .container-index,
+    .container-index2 {
+
         flex-direction: row;
     }
+
     .item2 {
         width: 20%;
     }
-    .item, item2 {
+
+    .item,
+    item2 {
         width: 40%;
     }
-    .nav-movile-popup{
-        display: none; 
+
+    .nav-movile-popup {
+        display: none;
     }
 }
 
 /* Extralarge devices (1200pz and up) */
 @media only screen and (min-width: 1200px) {
-    .container-index, .container-index2 {
-      
+
+    .container-index,
+    .container-index2 {
+
         flex-direction: row;
     }
+
     .item2 {
         width: 20%;
     }
+
     .item {
         width: 40%;
     }
-    .nav-movile-popup{
-        display: none; 
+
+    .nav-movile-popup {
+        display: none;
     }
 }
 
@@ -437,52 +476,6 @@ img {
     height: auto;
 }
 
-/* Aminación */
-@keyframes cambiarColor {
-    0% {
-        background: #f8a375;
-    }
-
-    /* Primer fotograma */
-    30% {
-        background: #ff8243;
-    }
-
-    /* Segundo fotograma */
-    100% {
-        background: #ffd792;
-    }
-
-    /* Último fotograma */
-
-}
-
-.cambiarColor {
-    width:  100%;
-    height: 100%;
-    background-color: #ffd792;
-    animation-name: cambiarColor;
-    animation-duration: 10s;
-    animation-delay: 1s;
-    animation-iteration-count: infinite;
-    /* animation: cambiarColor 2s 1s; */
-}
-
-
-
-
-/* Estilos de texto */
-
-/* <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 100 to 900
-
-.montserrat-<uniquifier> {
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
-}
-*/
 i,
 em {
     font-style: italic;
@@ -516,10 +509,10 @@ a {
 
 .marco {
     width: 96%;
-padding: 2vW;
+    padding: 2vW;
 }
 
-.item-nav{
+.item-nav {
     text-indent: 0;
     margin: 0;
     padding: 10px;
@@ -529,6 +522,7 @@ padding: 2vW;
     font-family: "Montserrat", sans-serif;
     color: #ff8243;
 }
+
 p {
     text-indent: 0;
     margin: 0;
@@ -538,18 +532,21 @@ p {
     hyphens: auto;
     font-family: "Montserrat", sans-serif;
 }
+
 .nombre {
     font-weight: bold;
     color: #ff8243;
-    
+
 }
-.viaje{
+
+.viaje {
     text-align: right;
     font-weight: bold;
     color: #909090;
     font-size: 1vw;
     margin-bottom: 1em;
 }
+
 .resena {
     text-indent: 0;
     margin: 0;
@@ -571,9 +568,10 @@ p {
     font-family: "Montserrat", sans-serif;
 }
 
-.naranja{
-color: #ff8243;
+.naranja {
+    color: #ff8243;
 }
+
 h1 {
     font-family: "Montserrat", sans-serif;
     text-align: center;
@@ -601,6 +599,6 @@ h6 {
     text-indent: 0;
 }
 
-.textitem{
+.textitem {
     font-size: 1rem;
 }
