--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,6 @@ button {
 
 /*---------Barra de navegacion---------*/
 .navbar-area {
-    grid-area: navbar-area;
     width: 100%;
 
 }
@@ -219,6 +218,8 @@ button {
     transform: translateX(-100%);
     transition: transform 0.5s ease;
     position: fixed;
+    top: 0;
+    left: 0;
     z-index: 1;
     height: 150%;
     width: 100%;
@@ -236,14 +237,16 @@ button {
     width: 70%;
     opacity: 1.0;
     display: flex;
+    z-index: 1;
     flex-direction: column;
 }
 
 .nav-movile-der {
-    background-color: #9a9a9ba5;
+    background-color: #989898a5;
     height: 100%;
     width: 30%;
-    opacity: 0.5;
+    opacity: 1;
+    z-index: 1;
 }
 
 .item-nav-movile {
